--- a/Amadeus/gtk-3.0/lightdm-gtk-greeter.css
+++ b/Amadeus/gtk-3.0/lightdm-gtk-greeter.css
@@ -5,9 +5,16 @@
  @define-color color_white_smoke #cecece;
  @define-color color_white_clear #f7ffff;
 
+
+
+.lightdm-gtk-greeter {
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+}
  
 /* the panel widget at the top */
-#panel_window {
+#panel_window 
+{
     background-color: alpha(@color_gray_dark,0.6);
     color: white;
     font: bold;
@@ -18,48 +25,52 @@
 }
 
 /* topmenu bar*/
-#panel_window > #menubar {
+#panel_window > #menubar 
+{
     background-color: alpha(@color_gray_dark,0.6);
     background-image: none;
     color: @color_white_smoke;
     border:none;
 }
 
-/* the menubars/menus of the panel, i.e. indicators */
-#panel_window .menubar,
-#panel_window .menubar > .menuitem {
+
+
+
+/* the top half of the login-window, in GtkDialog terms, the content(inner) */
+#content_frame 
+{
+    padding-bottom: 0px;
     background-color: transparent;
-    color: white;
+}
+
+
+#login_notebook {
+    background-color: transparent;
+    border : none;
+}
+
+
+
+
+/* the warning, in case a wrong password is entered or something else goes wrong according to PAM */
+#greeter_infobar {
+    border-bottom-width: 0;
     font: bold;
-    text-shadow: 0 1px alpha(black, 0.5);
-    icon-shadow: 0 1px alpha(black, 0.5);
 }
 
-#panel_window .menubar .menuitem:insensitive {
-    color: alpha(white, 0.7);
-    text-shadow: none;
-}
 
-#panel_window .menubar .menu {
-    border-radius: 10px;
-}
-
-#panel_window .menubar .menu .menuitem {
-    font: normal;
-    text-shadow: none;
-}
-
+/* ----------------------- dialog ----------------------------- */
 /* the login window */
 #login_window
 {
     border-style: none;
     border-radius: 0px;
-    background-color:red;
+    background-color:transparent;
     color: @color_orange_nixie;
 }
 
 
-
+/* shutdown and restart confirm dialog */
 #shutdown_dialog,
 #restart_dialog {
     border-style: none;
@@ -68,109 +79,9 @@
     color: @color_white_smoke;
 }
 
-/* the top half of the login-window, in GtkDialog terms, the content(inner) */
-#content_frame {
-    padding-bottom: 0px;
-    background-color: transparent;
-}
-
-/* the user-combobox */
-#login_window .menu {
-    border-radius: 1px;
-    border-color: #ff0000;
-}
-
-#login_window GtkComboBox .button,
-#login_window GtkComboBox .button:hover,
-#login_window GtkComboBox .button:active,
-#login_window GtkComboBox .button:active:hover,
-#login_window GtkComboBox .button:focus,
-#login_window GtkComboBox .button:hover:focus,
-#login_window GtkComboBox .button:active:focus,
-#login_window GtkComboBox .button:active:hover:focus {
-    padding: 0;
-    background: none;
-    border-style: none;                                      
-    box-shadow: none;
-    background-color: #ff00ff;
-}
-
-#login_window GtkComboBox .button:focus,
-#login_window GtkComboBox .button:hover:focus,
-#login_window GtkComboBox .button:active:focus,
-#login_window GtkComboBox .button:active:hover:focus {
-    box-shadow: inset 1px 0 alpha(@theme_selected_bg_color, 0.6),
-                inset -1px 0 alpha(@theme_selected_bg_color, 0.6),
-                inset 0 1px alpha(@theme_selected_bg_color, 0.6),
-                inset 0 -1px alpha(@theme_selected_bg_color, 0.6);
-}
-
-#login_window #user_combobox {
-    color: @lightdm_fg_color;
-    font: 18px;    
-    color:#ffff00;
-    background: transparent;
-}
 
 
-#user_combobox {
-    color: @color_orange_nixie;
-    font: 18px;    
-    color:#ffff00;
-    background: transparent;
-}
-
-
-#login_window #user_combobox .menu {
-    font: normal;
-    color:red;
-    background: transparent;
-}
-
-#login_window #user_combobox .arrow {
-    color: mix(@lightdm_fg_color, @lightdm_bg_color, 0.5);
-    color : green;
-    background: transparent;
-}
-
-#login_notebook {
-    background-color: transparent;
-    border : none;
-}
-
-/* the entries, one for the username, one for the password */
-#login_window .entry {
-    padding: 3px 5px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: shade(@lightdm_bg_color, 0.8);
-    border-radius: 12px;
-    background-color:transparent;
-
-    color: @lightdm_fg_color;
-                                      
-    box-shadow: none;
-    transition: all 150ms ease-out;
-}
-
-#login_window .entry:focus,
-#login_window .entry:hover {
-    border-color: shade(@lightdm_bg_color, 0.7);
-
-    box-shadow: inset 1px 0 alpha(@dark_shadow, 0.10),
-                inset 0 1px alpha(@dark_shadow, 0.12),
-                inset -1px 0 alpha(@dark_shadow, 0.10);
-}
-
-/* the buttons, alternatively this could also be done with a simple ".lightdm-gtk-greeter .button" */
-#login_window .button,
-#shutdown_dialog .button,
-#restart_dialog .button {
-    padding: 3px 15px;
-    transition: all 150ms ease-out;
-}
-
-/* the user's avatar box */
+/* ------------------------- the user's avatar box -------------------------------- */
 #user_image {
     padding: 3px;
     border-radius: 3px;
@@ -189,20 +100,6 @@
     background-color: transparent;
 }
 
-/* the lower half of the login-window, in GtkDialog terms the buttonbox or action area */
-#buttonbox_frame {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    border-style: none;
-}
-
-
-
-/* the warning, in case a wrong password is entered or something else goes wrong according to PAM */
-#greeter_infobar {
-    border-bottom-width: 0;
-    font: bold;
-}
 
 
 
@@ -250,5 +147,14 @@
     text-shadow: 0 0 12px @color_white_clear;
     border-color: @color_white_clear;
     color:@color_white_clear;
+}
+
+/* --------------------------------------- testing ---------------------------------- */
+
+
+#prompt_entry{
+    color: @color_gray_light;
+    border: 1px solid @color_gray_dark;
+    border-radius: 3px;
 }
 
