--- a/Amadeus/gtk-3.0/gtk.css
+++ b/Amadeus/gtk-3.0/gtk.css
@@ -26,6 +26,13 @@
 @define-color link_color #0000ee;
 @define-color visited_link_color #551a8b;
 
+@define-color color_orange_nixie #ffba00;
+@define-color color_orange_glow #fff749;
+@define-color color_gray_light #333333;
+@define-color color_gray_dark #1e1e1e;
+@define-color color_white_smoke #cecece;
+@define-color color_white_clear #f7ffff;
+
 /*****************
  * error/warning *
  *****************/
@@ -202,14 +209,14 @@
  * menu *
  ********/
 
-@define-color menu_bg_color @theme_base_color;
-@define-color menu_fg_color @theme_fg_color;
+@define-color menu_bg_color @color_gray_dark;
+@define-color menu_fg_color @color_gray_light;
 
 /* Example: submenu arrow. */
-@define-color menu_controls_color @theme_fg_color;
+@define-color menu_controls_color @color_orange_nixie;
 
-@define-color menu_border_color shade(@core_color_b, 0.72);
-@define-color menu_separator_color @menu_border_color;
+@define-color menu_border_color @color_gray_light;
+@define-color menu_separator_color @color_gray_light;
 
 /***********
  * menubar *
